--- a/loading_data/index.html
+++ b/loading_data/index.html
@@ -224,7 +224,7 @@
 <em>You can find and add data using the browser panel in QGIS or by dragging files from your operating system</em></p>
 <h2 id="adding-layers">Adding Layers</h2>
 <p>You can also add layers using the 'Manage Toolbar Layers' toolbar or under the Layer menu.</p>
-<p><img alt="Browser" src=".././images/AddLayer.png" /></p>
+<p><img alt="Browser" src="../images/AddLayer.png" /></p>
 <h3 id="these-all-do-the-same-thing">These all do the same thing</h3>
 <p><img alt="Browser" src="../.\images\AddVector.png" /> <strong>=</strong> <img alt="Browser" src="../.\images\AddVector2.png" /> <strong>=</strong></p>
 <p><img alt="Browser" src="../.\video\vectorAdd.gif" /></p>
