--- a/loading_data/index.html
+++ b/loading_data/index.html
@@ -220,13 +220,13 @@
 <p>Clearly, the first thing you need to do before loading data is find it. As we talk about in customizing the UI, there are often multiple ways to do similar things in QGIS. You can browser for data using the browser panel inside QGIS, or you can use your operating system to find a file (which you are probably already comfortable with) and drag it into the Layers panel. There are some slight differences between the two, which aren't worth getting into here. For the vast majority of the cases, either way will work.</p>
 <h3 id="to-use-the-file-browser-panel-or-not-to-use-the-file-browser-panel">To use the file browser panel or not to use the file browser panel...</h3>
 <p>Do this whichever way you'd like. Personally, I'd disable the Browser Panel to free up that space inside the QGIS GUI becuase I like seeing every inch of the beautiful maps I make. ;-)</p>
-<p><img alt="Browser" src="../.\images\browser.png" />
+<p><img alt="Browser" src="../.\images\browser.PNG" />
 <em>You can find and add data using the browser panel in QGIS or by dragging files from your operating system</em></p>
 <h2 id="adding-layers">Adding Layers</h2>
 <p>You can also add layers using the 'Manage Toolbar Layers' toolbar or under the Layer menu.</p>
-<p><img alt="Browser" src="../images/AddLayer.png" /></p>
+<p><img alt="Browser" src="../images/AddLayer.PNG" /></p>
 <h3 id="these-all-do-the-same-thing">These all do the same thing</h3>
-<p><img alt="Browser" src="../.\images\AddVector.png" /> <strong>=</strong> <img alt="Browser" src="../.\images\AddVector2.png" /> <strong>=</strong></p>
+<p><img alt="Browser" src="../.\images\AddVector.PNG" /> <strong>=</strong> <img alt="Browser" src="../.\images\AddVector2.png" /> <strong>=</strong></p>
 <p><img alt="Browser" src="../.\video\vectorAdd.gif" /></p>
 <h2 id="connect-to-db">Connect to DB</h2>
 <p>Special case, either talk about it here or just link to seperate section.</p>
