--- a/loading_data/index.html
+++ b/loading_data/index.html
@@ -226,7 +226,7 @@
 <p>You can also add layers using the 'Manage Toolbar Layers' toolbar or under the Layer menu.</p>
 <p><img alt="Browser" src="../images/AddLayer.PNG" /></p>
 <h3 id="these-all-do-the-same-thing">These all do the same thing</h3>
-<p><img alt="Browser" src="../.\images\AddVector.PNG" /> <strong>=</strong> <img alt="Browser" src="../.\images\AddVector2.png" /> <strong>=</strong></p>
+<p><img alt="Browser" src="../.\images\AddVector.PNG" /> <strong>=</strong> <img alt="Browser" src="../.\images\AddVector2.PNG" /> <strong>=</strong></p>
 <p><img alt="Browser" src="../.\video\vectorAdd.gif" /></p>
 <h2 id="connect-to-db">Connect to DB</h2>
 <p>Special case, either talk about it here or just link to seperate section.</p>
