styling, pothole time animation

--- a/site/Styling/index.html
+++ b/site/Styling/index.html
@@ -213,6 +213,8 @@
 <p>single symbol (default)</p>
 <p>categorized (good for categorical),</p>
 <p>graduated (good for numeric data)</p>
+<p><img alt="" src="../video/stylingLayers_removefill.gif" /></p>
+<p><img alt="" src="../video/stylingLayers_catdata.gif" /></p>
 <p>Pick a column to classify the data</p>
 <p>Can specify a number of classes and a scheme for dividing them, e.g. "equal interval", "quantile", "natural breaks", and can manually edit these</p>
 <p>Can look at the values in the histogram by clicking on the "Histogram" tab (which is at the same level as the "Classes" tab)</p>
@@ -220,14 +222,16 @@
 <p>Default rules will be created starting with other methods</p>
 <p>Heat-map (simple to use)</p>
 <p>Can play with rendering quality, color ramp, weight of different points</p>
+<p><img alt="" src="../video/stylingLayers_grad.gif" /></p>
 <h2 id="fancy-time-animation">Fancy Time Animation!</h2>
-<p>Creating time animation</p>
+<p><img alt="" src="../video/timeAnimation_potholes.gif" /></p>
 <p>Add the "TimeManager" plugin</p>
 <p>This adds a new window at the bottom</p>
 <p>Under Settings menu can</p>
 <p>Add a layer: select a layer, column of interest (and time units if desired)</p>
 <p>Select how to play back e.g. time increments, speed of display</p>
 <p>Have a button to "export video"</p>
+<p><img alt="" src="../video/timeAnimation_potholestime.gif" /></p>
               
             </div>
           </div>
