--- a/site/index.html
+++ b/site/index.html
@@ -197,6 +197,7 @@
               
                 <h1 id="osgis">OSGIS</h1>
 <p>Guides for basic Open Source GIS tasks</p>
+<p>Mostly Vector data, social science/civic tech focus</p>
               
             </div>
           </div>
@@ -242,5 +243,5 @@
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-05-27 18:16:33.329000
+Build Date UTC : 2016-06-10 18:50:41.810000
 -->
