--- a/site/index.html
+++ b/site/index.html
@@ -34,6 +34,16 @@
   <script src="./js/theme.js"></script> 
 
   
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-80645081-1', 'www.osgisomg.com');
+      ga('send', 'pageview');
+  </script>
+  
 </head>
 
 <body class="wy-body-for-nav" role="document">
@@ -204,12 +214,14 @@
                 <h1 id="osgis-guides-for-basic-gis-tasks-using-open-source-tools">OSGIS: Guides for basic GIS tasks using Open Source tools</h1>
 <h2 id="open-source"><strong>O</strong>pen <strong>S</strong>ource:</h2>
 <p>Mostly Vector data, social science/civic tech focus</p>
-<p>Free Software is not Free Beer      </p>
+<h3 id="free-software-is-not-free-beer"><a href="https://en.wikipedia.org/wiki/Gratis_versus_libre">Free Software is not Free Beer</a></h3>
 <h2 id="geographic-information-systems"><strong>G</strong>eographic <strong>I</strong>nformation <strong>S</strong>ystems:</h2>
-<p>Everything in it's right place      </p>
+<p>A place for everything and...     <br />
+Everything In Its Right Place     <br />
+<img alt="" src="http://i.giphy.com/lD59ZRdTSlN6M.gif" /></p>
 <h2 id="oh-my-god"><strong>O</strong>h <strong>M</strong>y <strong>G</strong>od:</h2>
 <p><img alt="" src="http://media.urbandictionary.com/image/page/omg-48353.jpg" />    <br />
-<img alt="OMG" src="http://i.giphy.com/ZXE8IGiJYrXOM.gif" /></p>
+<img alt="OMG" src="http://i.giphy.com/14vFOciTnQjnl6.gif" /></p>
               
             </div>
           </div>
@@ -255,5 +267,5 @@
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-07-12 20:44:05.286000
+Build Date UTC : 2016-07-12 20:58:00.408000
 -->
